cmake_minimum_required(VERSION 3.24)

project(YuEngine LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

function(yuengine_apply_compile_options target_name)
    target_compile_features(${target_name} PUBLIC cxx_std_20)

    if(MSVC)
        target_compile_options(${target_name} PRIVATE /W4 /permissive-)
        return()
    endif()

    target_compile_options(${target_name} PRIVATE -Wall -Wextra -Wpedantic)
endfunction()

add_library(YuMemory
    Src/YuEngine/Memory/Src/CountingMemoryTracker.cpp
    Src/YuEngine/Memory/Src/DisabledMemoryTracker.cpp
)
yuengine_apply_compile_options(YuMemory)
target_include_directories(YuMemory
    PUBLIC
        Src/YuEngine/Memory/Include
)

add_library(YuScript
    Src/YuEngine/Script/Src/ScriptNativeRegistry.cpp
)
yuengine_apply_compile_options(YuScript)
target_include_directories(YuScript
    PUBLIC
        Src/YuEngine/Script/Include
)
target_link_libraries(YuScript PUBLIC YuMemory)

add_library(YuWorld
    Src/YuEngine/World/Src/WorldInstance.cpp
    Src/YuEngine/World/Src/WorldObjectIdentityBridge.cpp
    Src/YuEngine/World/Src/WorldKernelModule.cpp
    Src/YuEngine/World/Src/WorldScriptDispatchBridge.cpp
    Src/YuEngine/World/Src/WorldSerializeSnapshotBridge.cpp
    Src/YuEngine/World/Src/WorldTransformBridge.cpp
)
yuengine_apply_compile_options(YuWorld)
target_include_directories(YuWorld
    PUBLIC
        Src/YuEngine/World/Include
)
target_link_libraries(YuWorld PUBLIC YuMemory)
target_link_libraries(YuWorld PUBLIC YuScript)
target_link_libraries(YuWorld PUBLIC YuSerialize)

add_library(YuDiagnostics
    Src/YuEngine/Diagnostics/Src/BoundedDiagnosticsChannel.cpp
    Src/YuEngine/Diagnostics/Src/BoundedInMemoryLogSink.cpp
    Src/YuEngine/Diagnostics/Src/DefaultLogSink.cpp
    Src/YuEngine/Diagnostics/Src/DisabledDiagnosticsChannel.cpp
    Src/YuEngine/Diagnostics/Src/DisabledLogSink.cpp
)
yuengine_apply_compile_options(YuDiagnostics)
target_include_directories(YuDiagnostics
    PUBLIC
        Src/YuEngine/Diagnostics/Include
)
target_link_libraries(YuDiagnostics PUBLIC YuMemory)

add_library(YuThread
    Src/YuEngine/Thread/Src/BoundedTaskQueue.cpp
    Src/YuEngine/Thread/Src/InlineTaskExecutor.cpp
)
yuengine_apply_compile_options(YuThread)
target_include_directories(YuThread
    PUBLIC
        Src/YuEngine/Thread/Include
)
target_link_libraries(YuThread PUBLIC YuMemory)

add_library(YuFile
    Src/YuEngine/File/Src/FileReadResult.cpp
    Src/YuEngine/File/Src/LooseFileSource.cpp
    Src/YuEngine/File/Src/MountId.cpp
    Src/YuEngine/File/Src/MountPoint.cpp
    Src/YuEngine/File/Src/MountTable.cpp
    Src/YuEngine/File/Src/NormalizedPath.cpp
    Src/YuEngine/File/Src/PathNormalizationResult.cpp
    Src/YuEngine/File/Src/VirtualPath.cpp
)
yuengine_apply_compile_options(YuFile)
target_include_directories(YuFile
    PUBLIC
        Src/YuEngine/File/Include
)
target_link_libraries(YuFile PUBLIC YuMemory)

add_library(YuRHI
    Src/YuEngine/Rhi/Src/NullRhiDevice.cpp
    Src/YuEngine/Rhi/Src/RhiCommandList.cpp
)
yuengine_apply_compile_options(YuRHI)
target_include_directories(YuRHI
    PUBLIC
        Src/YuEngine/Rhi/Include
)

add_library(YuAudio
    Src/YuEngine/Audio/Src/TestAudioDevice.cpp
)
yuengine_apply_compile_options(YuAudio)
target_include_directories(YuAudio
    PUBLIC
        Src/YuEngine/Audio/Include
)

add_library(YuResource
    Src/YuEngine/Resource/Src/ResourceLogicalKey.cpp
    Src/YuEngine/Resource/Src/ResourceRegistry.cpp
)
yuengine_apply_compile_options(YuResource)
target_include_directories(YuResource
    PUBLIC
        Src/YuEngine/Resource/Include
)
target_link_libraries(YuResource PUBLIC YuMemory)

add_library(YuObject
    Src/YuEngine/Object/Src/ObjectRegistry.cpp
)
yuengine_apply_compile_options(YuObject)
target_include_directories(YuObject
    PUBLIC
        Src/YuEngine/Object/Include
)
target_link_libraries(YuObject PUBLIC YuMemory)
target_link_libraries(YuWorld PUBLIC YuObject)

add_library(YuSerialize
    Src/YuEngine/Serialize/Src/SerializeReader.cpp
    Src/YuEngine/Serialize/Src/SerializeWriter.cpp
)
yuengine_apply_compile_options(YuSerialize)
target_include_directories(YuSerialize
    PUBLIC
        Src/YuEngine/Serialize/Include
)
target_link_libraries(YuSerialize PUBLIC YuMemory)

add_library(YuPackage
    Src/YuEngine/Package/Src/PackageLoadPlanResult.cpp
    Src/YuEngine/Package/Src/PackageRegistrationResult.cpp
    Src/YuEngine/Package/Src/PackageRegistry.cpp
    Src/YuEngine/Package/Src/PackageSourceKey.cpp
)
yuengine_apply_compile_options(YuPackage)
target_include_directories(YuPackage
    PUBLIC
        Src/YuEngine/Package/Include
)
target_link_libraries(YuPackage PUBLIC YuMemory YuResource)

add_library(YuInput
    Src/YuEngine/Input/Src/InputReplay.cpp
)
yuengine_apply_compile_options(YuInput)
target_include_directories(YuInput
    PUBLIC
        Src/YuEngine/Input/Include
)

add_library(YuPlatform
    Src/YuEngine/Platform/Src/FixedFrameClock.cpp
    Src/YuEngine/Platform/Src/HeadlessHost.cpp
    Src/YuEngine/Platform/Src/HostError.cpp
)
yuengine_apply_compile_options(YuPlatform)
target_include_directories(YuPlatform
    PUBLIC
        Src/YuEngine/Platform/Include
)
target_link_libraries(YuPlatform PUBLIC YuDiagnostics YuMemory)

add_library(YuKernel
    Src/YuEngine/Kernel/Src/EngineKernel.cpp
    Src/YuEngine/Kernel/Src/KernelHostRuntime.cpp
    Src/YuEngine/Kernel/Src/KernelResult.cpp
    Src/YuEngine/Kernel/Src/ServiceRegistry.cpp
)
yuengine_apply_compile_options(YuKernel)
target_include_directories(YuKernel
    PUBLIC
        Src/YuEngine/Kernel/Include
)
target_link_libraries(YuKernel PUBLIC YuPlatform)
target_link_libraries(YuWorld PUBLIC YuKernel)

add_executable(YuHeadless
    Apps/YuEngineHeadless/Main.cpp
)
yuengine_apply_compile_options(YuHeadless)
target_link_libraries(YuHeadless PRIVATE YuKernel)

enable_testing()

add_executable(YuPlatformTests
    Tests/Platform/PlatformTests.cpp
)
yuengine_apply_compile_options(YuPlatformTests)
target_link_libraries(YuPlatformTests PRIVATE YuPlatform)
add_test(NAME Host_StartTickShutdown_Deterministic COMMAND YuPlatformTests Host_StartTickShutdown_Deterministic)
add_test(NAME Host_TimerMonotonic_ForFixedTicks COMMAND YuPlatformTests Host_TimerMonotonic_ForFixedTicks)
add_test(NAME Platform_AllocationAccountingStatus_UsesMemoryHook COMMAND YuPlatformTests Platform_AllocationAccountingStatus_UsesMemoryHook)

add_executable(YuDiagnosticsTests
    Tests/Diagnostics/DiagnosticsTests.cpp
)
yuengine_apply_compile_options(YuDiagnosticsTests)
target_link_libraries(YuDiagnosticsTests PRIVATE YuPlatform)
add_test(NAME Logging_DisabledSink_DoesNotChangeBehavior COMMAND YuDiagnosticsTests Logging_DisabledSink_DoesNotChangeBehavior)
add_test(NAME Logging_ModuleFilterAndDynamicSwitch COMMAND YuDiagnosticsTests Logging_ModuleFilterAndDynamicSwitch)
add_test(NAME Diagnostics_DisabledChannel_DoesNotChangeBehavior COMMAND YuDiagnosticsTests Diagnostics_DisabledChannel_DoesNotChangeBehavior)
add_test(NAME Diagnostics_BoundedChannel_RecordsEventsAndCounters COMMAND YuDiagnosticsTests Diagnostics_BoundedChannel_RecordsEventsAndCounters)
add_test(NAME Diagnostics_BoundedChannel_DropsWhenFull COMMAND YuDiagnosticsTests Diagnostics_BoundedChannel_DropsWhenFull)
add_test(NAME Diagnostics_ChannelSnapshot_ReportsAcceptedDroppedAndCounters COMMAND YuDiagnosticsTests Diagnostics_ChannelSnapshot_ReportsAcceptedDroppedAndCounters)
add_test(NAME Diagnostics_ChannelStopped_DoesNotMutateAfterShutdown COMMAND YuDiagnosticsTests Diagnostics_ChannelStopped_DoesNotMutateAfterShutdown)
add_test(NAME Diagnostics_ChannelRejectsUnknownIds_WhenValidationEnabled COMMAND YuDiagnosticsTests Diagnostics_ChannelRejectsUnknownIds_WhenValidationEnabled)
add_test(NAME Diagnostics_CounterOverflow_ReturnsExplicitStatusAndDoesNotMutate COMMAND YuDiagnosticsTests Diagnostics_CounterOverflow_ReturnsExplicitStatusAndDoesNotMutate)
add_test(NAME Diagnostics_NoReportDependency_ForRuntimeResults COMMAND YuDiagnosticsTests Diagnostics_NoReportDependency_ForRuntimeResults)
add_test(NAME Diagnostics_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuDiagnosticsTests Diagnostics_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuKernelTests
    Tests/Kernel/KernelTests.cpp
)
yuengine_apply_compile_options(YuKernelTests)
target_link_libraries(YuKernelTests PRIVATE YuKernel)
add_test(NAME Kernel_ModuleLifecycle_DependencyOrder COMMAND YuKernelTests Kernel_ModuleLifecycle_DependencyOrder)
add_test(NAME Kernel_ModuleStartupFailure_TearsDownStartedModules COMMAND YuKernelTests Kernel_ModuleStartupFailure_TearsDownStartedModules)
add_test(NAME Kernel_DependencyChainServiceLookup_UsesModuleNameIndex COMMAND YuKernelTests Kernel_DependencyChainServiceLookup_UsesModuleNameIndex)
add_test(NAME Kernel_ServiceRegistry_ResolveAndMissingService COMMAND YuKernelTests Kernel_ServiceRegistry_ResolveAndMissingService)
add_test(NAME Kernel_InvalidLifecycle_RejectsOutOfOrderCalls COMMAND YuKernelTests Kernel_InvalidLifecycle_RejectsOutOfOrderCalls)

add_executable(YuMemoryTests
    Tests/Memory/MemoryTests.cpp
)
yuengine_apply_compile_options(YuMemoryTests)
target_link_libraries(YuMemoryTests PRIVATE YuMemory)
add_test(NAME Memory_TrackerCountsAllocationAndFree COMMAND YuMemoryTests Memory_TrackerCountsAllocationAndFree)
add_test(NAME Memory_TrackerReportsPeakAndRetainedBytes COMMAND YuMemoryTests Memory_TrackerReportsPeakAndRetainedBytes)
add_test(NAME Memory_TrackerReportsLeakOnUnreleasedBytes COMMAND YuMemoryTests Memory_TrackerReportsLeakOnUnreleasedBytes)
add_test(NAME Memory_TrackerRejectsUnmatchedFree COMMAND YuMemoryTests Memory_TrackerRejectsUnmatchedFree)
add_test(NAME Memory_TrackerRecordsBudgetClass COMMAND YuMemoryTests Memory_TrackerRecordsBudgetClass)
add_test(NAME Memory_DisabledTracker_DoesNotChangeBehavior COMMAND YuMemoryTests Memory_DisabledTracker_DoesNotChangeBehavior)
add_test(NAME Memory_HotPathBudget_FailsOnTrackedAllocation COMMAND YuMemoryTests Memory_HotPathBudget_FailsOnTrackedAllocation)
add_test(NAME Memory_TrackerRejectsBeyondFixedCapacityWithoutMutation COMMAND YuMemoryTests Memory_TrackerRejectsBeyondFixedCapacityWithoutMutation)
add_test(NAME Memory_TrackerEnforcesOwnerAndTagByteCapsWithoutMutation COMMAND YuMemoryTests Memory_TrackerEnforcesOwnerAndTagByteCapsWithoutMutation)

add_executable(YuScriptTests
    Tests/Script/ScriptTests.cpp
)
yuengine_apply_compile_options(YuScriptTests)
target_link_libraries(YuScriptTests PRIVATE YuScript)
add_test(NAME Script_RegisterNativeCall_ReturnsStableId COMMAND YuScriptTests Script_RegisterNativeCall_ReturnsStableId)
add_test(NAME Script_RegisterDuplicateCall_ReturnsExplicitStatus COMMAND YuScriptTests Script_RegisterDuplicateCall_ReturnsExplicitStatus)
add_test(NAME Script_RegisterRejectsNullFunction COMMAND YuScriptTests Script_RegisterRejectsNullFunction)
add_test(NAME Script_RegistryCapacityOverflow_DoesNotMutate COMMAND YuScriptTests Script_RegistryCapacityOverflow_DoesNotMutate)
add_test(NAME Script_InvokeNativeCall_WritesResultDeterministically COMMAND YuScriptTests Script_InvokeNativeCall_WritesResultDeterministically)
add_test(NAME Script_InvokeRejectsUnknownCallId COMMAND YuScriptTests Script_InvokeRejectsUnknownCallId)
add_test(NAME Script_InvokeRejectsArgumentCountMismatch COMMAND YuScriptTests Script_InvokeRejectsArgumentCountMismatch)
add_test(NAME Script_InvokeRejectsArgumentTypeMismatch COMMAND YuScriptTests Script_InvokeRejectsArgumentTypeMismatch)
add_test(NAME Script_InvokeRejectsResultCountMismatch COMMAND YuScriptTests Script_InvokeRejectsResultCountMismatch)
add_test(NAME Script_NativeFailure_ReturnsExplicitStatus COMMAND YuScriptTests Script_NativeFailure_ReturnsExplicitStatus)
add_test(NAME Script_CallPath_DoesNotGrowRegistryStorage COMMAND YuScriptTests Script_CallPath_DoesNotGrowRegistryStorage)
add_test(NAME Script_NoWorldResourcePackageOrGameAdapterDependency COMMAND YuScriptTests Script_NoWorldResourcePackageOrGameAdapterDependency)
add_test(NAME Script_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuScriptTests Script_NoHiddenAllocation_UsesYuMemorySignal)
add_test(NAME Script_SnapshotReportsCountsAndLastStatus COMMAND YuScriptTests Script_SnapshotReportsCountsAndLastStatus)

add_executable(YuWorldTests
    Tests/World/WorldTests.cpp
)
yuengine_apply_compile_options(YuWorldTests)
target_link_libraries(YuWorldTests PRIVATE YuWorld YuPlatform)
add_test(NAME World_CreateWithFixedCapacity_ReportsSnapshot COMMAND YuWorldTests World_CreateWithFixedCapacity_ReportsSnapshot)
add_test(NAME World_StartStop_RunsDeterministicLifecycle COMMAND YuWorldTests World_StartStop_RunsDeterministicLifecycle)
add_test(NAME World_UpdateRunsPhasesInFixedOrder COMMAND YuWorldTests World_UpdateRunsPhasesInFixedOrder)
add_test(NAME World_UpdateBeforeStart_ReturnsExplicitStatus COMMAND YuWorldTests World_UpdateBeforeStart_ReturnsExplicitStatus)
add_test(NAME World_UpdateAfterStop_ReturnsExplicitStatus COMMAND YuWorldTests World_UpdateAfterStop_ReturnsExplicitStatus)
add_test(NAME World_RegisterDuplicateObject_DoesNotMutate COMMAND YuWorldTests World_RegisterDuplicateObject_DoesNotMutate)
add_test(NAME World_RegisterOverflow_DoesNotMutate COMMAND YuWorldTests World_RegisterOverflow_DoesNotMutate)
add_test(NAME World_DisabledObject_IsSkipped COMMAND YuWorldTests World_DisabledObject_IsSkipped)
add_test(NAME World_UpdatePath_DoesNotGrowStorage COMMAND YuWorldTests World_UpdatePath_DoesNotGrowStorage)
add_test(NAME World_StopClearsActiveEntries COMMAND YuWorldTests World_StopClearsActiveEntries)
add_test(NAME World_NoScriptResourcePackageFileOrGameAdapterDependency COMMAND YuWorldTests World_NoScriptResourcePackageFileOrGameAdapterDependency)
add_test(NAME World_NoActorComponentOrTransformHierarchy COMMAND YuWorldTests World_NoActorComponentOrTransformHierarchy)
add_test(NAME World_SnapshotReportsCountsAndLastStatus COMMAND YuWorldTests World_SnapshotReportsCountsAndLastStatus)
add_test(NAME WorldKernelModule_StartPublishesWorldService COMMAND YuWorldTests WorldKernelModule_StartPublishesWorldService)
add_test(NAME WorldKernelModule_UpdateTicksWorldInKernelOrder COMMAND YuWorldTests WorldKernelModule_UpdateTicksWorldInKernelOrder)
add_test(NAME WorldKernelModule_ShutdownStopsWorld COMMAND YuWorldTests WorldKernelModule_ShutdownStopsWorld)
add_test(NAME WorldKernelModule_StartFailurePropagatesExplicitStatus COMMAND YuWorldTests WorldKernelModule_StartFailurePropagatesExplicitStatus)
add_test(NAME WorldKernelModule_UpdateFailureTriggersKernelTeardown COMMAND YuWorldTests WorldKernelModule_UpdateFailureTriggersKernelTeardown)
add_test(NAME WorldKernelModule_HeadlessHostDrivesWorldDeterministically COMMAND YuWorldTests WorldKernelModule_HeadlessHostDrivesWorldDeterministically)
add_test(NAME WorldKernelModule_UpdatePathDoesNotGrowWorldStorage COMMAND YuWorldTests WorldKernelModule_UpdatePathDoesNotGrowWorldStorage)
add_test(NAME WorldKernelModule_NoScriptResourcePackageFileOrGameAdapterDependency COMMAND YuWorldTests WorldKernelModule_NoScriptResourcePackageFileOrGameAdapterDependency)
add_test(NAME WorldKernelModule_NoActorComponentOrTransformHierarchy COMMAND YuWorldTests WorldKernelModule_NoActorComponentOrTransformHierarchy)
add_test(NAME WorldKernelModule_CoreWorldInstanceRemainsKernelFree COMMAND YuWorldTests WorldKernelModule_CoreWorldInstanceRemainsKernelFree)
add_test(NAME WorldObjectIdentityBridge_BindValidObject_AcquiresHandle COMMAND YuWorldTests WorldObjectIdentityBridge_BindValidObject_AcquiresHandle)
add_test(NAME WorldObjectIdentityBridge_BindRejectsInvalidWorldIdWithoutMutation COMMAND YuWorldTests WorldObjectIdentityBridge_BindRejectsInvalidWorldIdWithoutMutation)
add_test(NAME WorldObjectIdentityBridge_BindRejectsMissingWorldObjectWithoutMutation COMMAND YuWorldTests WorldObjectIdentityBridge_BindRejectsMissingWorldObjectWithoutMutation)
add_test(NAME WorldObjectIdentityBridge_BindRejectsInvalidObjectHandleWithoutMutation COMMAND YuWorldTests WorldObjectIdentityBridge_BindRejectsInvalidObjectHandleWithoutMutation)
add_test(NAME WorldObjectIdentityBridge_BindRejectsDuplicateWorldObjectId COMMAND YuWorldTests WorldObjectIdentityBridge_BindRejectsDuplicateWorldObjectId)
add_test(NAME WorldObjectIdentityBridge_BindRejectsDuplicateObjectHandle COMMAND YuWorldTests WorldObjectIdentityBridge_BindRejectsDuplicateObjectHandle)
add_test(NAME WorldObjectIdentityBridge_RemoveReleasesHandle COMMAND YuWorldTests WorldObjectIdentityBridge_RemoveReleasesHandle)
add_test(NAME WorldObjectIdentityBridge_ClearReleasesAllHandles COMMAND YuWorldTests WorldObjectIdentityBridge_ClearReleasesAllHandles)
add_test(NAME WorldObjectIdentityBridge_StaleGenerationInvalidatesBinding COMMAND YuWorldTests WorldObjectIdentityBridge_StaleGenerationInvalidatesBinding)
add_test(NAME WorldObjectIdentityBridge_UpdatePathDoesNotGrowWorldStorage COMMAND YuWorldTests WorldObjectIdentityBridge_UpdatePathDoesNotGrowWorldStorage)
add_test(NAME WorldObjectIdentityBridge_NoScriptResourcePackageFileOrGameAdapterDependency COMMAND YuWorldTests WorldObjectIdentityBridge_NoScriptResourcePackageFileOrGameAdapterDependency)
add_test(NAME WorldObjectIdentityBridge_NoActorComponentOrTransformHierarchy COMMAND YuWorldTests WorldObjectIdentityBridge_NoActorComponentOrTransformHierarchy)
add_test(NAME WorldObjectIdentityBridge_WorldInstanceCoreRemainsObjectFree COMMAND YuWorldTests WorldObjectIdentityBridge_WorldInstanceCoreRemainsObjectFree)
add_test(NAME WorldTransformBridge_RegisterValidObject_StoresTransform COMMAND YuWorldTests WorldTransformBridge_RegisterValidObject_StoresTransform)
add_test(NAME WorldTransformBridge_RegisterRejectsInvalidWorldIdWithoutMutation COMMAND YuWorldTests WorldTransformBridge_RegisterRejectsInvalidWorldIdWithoutMutation)
add_test(NAME WorldTransformBridge_RegisterRejectsMissingWorldObjectWithoutMutation COMMAND YuWorldTests WorldTransformBridge_RegisterRejectsMissingWorldObjectWithoutMutation)
add_test(NAME WorldTransformBridge_RegisterRejectsDuplicateWorldObjectId COMMAND YuWorldTests WorldTransformBridge_RegisterRejectsDuplicateWorldObjectId)
add_test(NAME WorldTransformBridge_RegisterRejectsCapacityOverflowWithoutMutation COMMAND YuWorldTests WorldTransformBridge_RegisterRejectsCapacityOverflowWithoutMutation)
add_test(NAME WorldTransformBridge_SetUpdatesExistingRecord COMMAND YuWorldTests WorldTransformBridge_SetUpdatesExistingRecord)
add_test(NAME WorldTransformBridge_SetRejectsMissingRecordWithoutMutation COMMAND YuWorldTests WorldTransformBridge_SetRejectsMissingRecordWithoutMutation)
add_test(NAME WorldTransformBridge_QueryReturnsStoredTransform COMMAND YuWorldTests WorldTransformBridge_QueryReturnsStoredTransform)
add_test(NAME WorldTransformBridge_RemoveClearsRecord COMMAND YuWorldTests WorldTransformBridge_RemoveClearsRecord)
add_test(NAME WorldTransformBridge_ClearRemovesAllRecords COMMAND YuWorldTests WorldTransformBridge_ClearRemovesAllRecords)
add_test(NAME WorldTransformBridge_UpdatePathDoesNotGrowWorldStorage COMMAND YuWorldTests WorldTransformBridge_UpdatePathDoesNotGrowWorldStorage)
add_test(NAME WorldTransformBridge_NoScriptResourcePackageFileObjectOrGameAdapterDependency COMMAND YuWorldTests WorldTransformBridge_NoScriptResourcePackageFileObjectOrGameAdapterDependency)
add_test(NAME WorldTransformBridge_NoActorComponentSceneGraphOrHierarchy COMMAND YuWorldTests WorldTransformBridge_NoActorComponentSceneGraphOrHierarchy)
add_test(NAME WorldTransformBridge_WorldInstanceCoreRemainsTransformStorageFree COMMAND YuWorldTests WorldTransformBridge_WorldInstanceCoreRemainsTransformStorageFree)
add_test(NAME WorldScriptDispatchBridge_BindPhaseCall_ReturnsStableBinding COMMAND YuWorldTests WorldScriptDispatchBridge_BindPhaseCall_ReturnsStableBinding)
add_test(NAME WorldScriptDispatchBridge_BindRejectsInvalidCallIdWithoutMutation COMMAND YuWorldTests WorldScriptDispatchBridge_BindRejectsInvalidCallIdWithoutMutation)
add_test(NAME WorldScriptDispatchBridge_BindRejectsDuplicatePhaseWithoutMutation COMMAND YuWorldTests WorldScriptDispatchBridge_BindRejectsDuplicatePhaseWithoutMutation)
add_test(NAME WorldScriptDispatchBridge_BindRejectsCapacityOverflowWithoutMutation COMMAND YuWorldTests WorldScriptDispatchBridge_BindRejectsCapacityOverflowWithoutMutation)
add_test(NAME WorldScriptDispatchBridge_DispatchTraceInvokesPhasesInTraceOrder COMMAND YuWorldTests WorldScriptDispatchBridge_DispatchTraceInvokesPhasesInTraceOrder)
add_test(NAME WorldScriptDispatchBridge_DispatchSkipsUnboundPhase COMMAND YuWorldTests WorldScriptDispatchBridge_DispatchSkipsUnboundPhase)
add_test(NAME WorldScriptDispatchBridge_DispatchRejectsInvalidTraceBuffer COMMAND YuWorldTests WorldScriptDispatchBridge_DispatchRejectsInvalidTraceBuffer)
add_test(NAME WorldScriptDispatchBridge_DispatchRejectsInvalidSlotBuffers COMMAND YuWorldTests WorldScriptDispatchBridge_DispatchRejectsInvalidSlotBuffers)
add_test(NAME WorldScriptDispatchBridge_DispatchPropagatesScriptFailure COMMAND YuWorldTests WorldScriptDispatchBridge_DispatchPropagatesScriptFailure)
add_test(NAME WorldScriptDispatchBridge_DispatchPathDoesNotGrowStorage COMMAND YuWorldTests WorldScriptDispatchBridge_DispatchPathDoesNotGrowStorage)
add_test(NAME WorldScriptDispatchBridge_SnapshotReportsCountsAndLastStatus COMMAND YuWorldTests WorldScriptDispatchBridge_SnapshotReportsCountsAndLastStatus)
add_test(NAME WorldScriptDispatchBridge_NoActorComponentSceneGraphOrGameAdapterDependency COMMAND YuWorldTests WorldScriptDispatchBridge_NoActorComponentSceneGraphOrGameAdapterDependency)
add_test(NAME WorldScriptDispatchBridge_NoResourcePackageFileSerializeOrObjectOwnershipDependency COMMAND YuWorldTests WorldScriptDispatchBridge_NoResourcePackageFileSerializeOrObjectOwnershipDependency)
add_test(NAME WorldScriptDispatchBridge_WorldInstanceCoreRemainsScriptFree COMMAND YuWorldTests WorldScriptDispatchBridge_WorldInstanceCoreRemainsScriptFree)
add_test(NAME WorldScriptDispatchBridge_ScriptRegistryCoreRemainsWorldFree COMMAND YuWorldTests WorldScriptDispatchBridge_ScriptRegistryCoreRemainsWorldFree)
add_test(NAME WorldSerializeSnapshotBridge_WriteWorldSnapshot_RoundTripsDeterministically COMMAND YuWorldTests WorldSerializeSnapshotBridge_WriteWorldSnapshot_RoundTripsDeterministically)
add_test(NAME WorldSerializeSnapshotBridge_WritePhaseTraceRecordsInOrder COMMAND YuWorldTests WorldSerializeSnapshotBridge_WritePhaseTraceRecordsInOrder)
add_test(NAME WorldSerializeSnapshotBridge_WriteOptionalTransformSnapshotCounters COMMAND YuWorldTests WorldSerializeSnapshotBridge_WriteOptionalTransformSnapshotCounters)
add_test(NAME WorldSerializeSnapshotBridge_ReadRejectsSmallTraceOutputWithoutOverrun COMMAND YuWorldTests WorldSerializeSnapshotBridge_ReadRejectsSmallTraceOutputWithoutOverrun)
add_test(NAME WorldSerializeSnapshotBridge_WriteRejectsInvalidTraceBufferWithoutMutation COMMAND YuWorldTests WorldSerializeSnapshotBridge_WriteRejectsInvalidTraceBufferWithoutMutation)
add_test(NAME WorldSerializeSnapshotBridge_WriteRejectsTraceOverflowWithoutMutation COMMAND YuWorldTests WorldSerializeSnapshotBridge_WriteRejectsTraceOverflowWithoutMutation)
add_test(NAME WorldSerializeSnapshotBridge_SerializeFailureMapsExplicitStatus COMMAND YuWorldTests WorldSerializeSnapshotBridge_SerializeFailureMapsExplicitStatus)
add_test(NAME WorldSerializeSnapshotBridge_ReadFailureMapsExplicitStatus COMMAND YuWorldTests WorldSerializeSnapshotBridge_ReadFailureMapsExplicitStatus)
add_test(NAME WorldSerializeSnapshotBridge_ReadRejectsInvalidEnumValuesWithoutMutation COMMAND YuWorldTests WorldSerializeSnapshotBridge_ReadRejectsInvalidEnumValuesWithoutMutation)
add_test(NAME WorldSerializeSnapshotBridge_NoWorldMutationDuringReadWrite COMMAND YuWorldTests WorldSerializeSnapshotBridge_NoWorldMutationDuringReadWrite)
add_test(NAME WorldSerializeSnapshotBridge_ReadWritePathDoesNotGrowStorage COMMAND YuWorldTests WorldSerializeSnapshotBridge_ReadWritePathDoesNotGrowStorage)
add_test(NAME WorldSerializeSnapshotBridge_SnapshotReportsCountsAndLastStatus COMMAND YuWorldTests WorldSerializeSnapshotBridge_SnapshotReportsCountsAndLastStatus)
add_test(NAME WorldSerializeSnapshotBridge_NoFilePackageResourceSaveGameOrGameAdapterDependency COMMAND YuWorldTests WorldSerializeSnapshotBridge_NoFilePackageResourceSaveGameOrGameAdapterDependency)
add_test(NAME WorldSerializeSnapshotBridge_NoActorComponentSceneGraphOrGameplayDependency COMMAND YuWorldTests WorldSerializeSnapshotBridge_NoActorComponentSceneGraphOrGameplayDependency)
add_test(NAME WorldSerializeSnapshotBridge_WorldInstanceCoreRemainsSerializeFree COMMAND YuWorldTests WorldSerializeSnapshotBridge_WorldInstanceCoreRemainsSerializeFree)
add_test(NAME WorldSerializeSnapshotBridge_SerializeCoreRemainsWorldFree COMMAND YuWorldTests WorldSerializeSnapshotBridge_SerializeCoreRemainsWorldFree)

add_executable(YuThreadTests
    Tests/Thread/ThreadTestContext.cpp
    Tests/Thread/ThreadTests.cpp
)
yuengine_apply_compile_options(YuThreadTests)
target_link_libraries(YuThreadTests PRIVATE YuThread)
add_test(NAME Thread_QueueEnqueueWithinCapacity_Succeeds COMMAND YuThreadTests Thread_QueueEnqueueWithinCapacity_Succeeds)
add_test(NAME Thread_QueueEnqueueBeyondCapacity_Rejects COMMAND YuThreadTests Thread_QueueEnqueueBeyondCapacity_Rejects)
add_test(NAME Thread_DrainExecutesTasks_InDeterministicOrder COMMAND YuThreadTests Thread_DrainExecutesTasks_InDeterministicOrder)
add_test(NAME Thread_TaskFailure_ReturnsFailedResult COMMAND YuThreadTests Thread_TaskFailure_ReturnsFailedResult)
add_test(NAME Thread_ShutdownRejectsNewSubmission COMMAND YuThreadTests Thread_ShutdownRejectsNewSubmission)
add_test(NAME Thread_ShutdownDrainPolicy_ExecutesQueuedTasks COMMAND YuThreadTests Thread_ShutdownDrainPolicy_ExecutesQueuedTasks)
add_test(NAME Thread_ShutdownCancelPolicy_CancelsQueuedTasks COMMAND YuThreadTests Thread_ShutdownCancelPolicy_CancelsQueuedTasks)
add_test(NAME Thread_QueueCapacity_DoesNotGrowDuringFixture COMMAND YuThreadTests Thread_QueueCapacity_DoesNotGrowDuringFixture)
add_test(NAME Thread_DiagnosticsDisabled_DoesNotChangeBehavior COMMAND YuThreadTests Thread_DiagnosticsDisabled_DoesNotChangeBehavior)

add_executable(YuFileTests
    Tests/File/FileTests.cpp
)
yuengine_apply_compile_options(YuFileTests)
target_link_libraries(YuFileTests PRIVATE YuFile)
target_compile_definitions(YuFileTests PRIVATE YUENGINE_FILE_FIXTURE_ROOT="${CMAKE_CURRENT_SOURCE_DIR}/Tests/Fixtures/File")
add_test(NAME File_PathNormalize_RemovesDotAndRepeatedSeparators COMMAND YuFileTests File_PathNormalize_RemovesDotAndRepeatedSeparators)
add_test(NAME File_PathNormalize_RejectsTraversalOutsideRoot COMMAND YuFileTests File_PathNormalize_RejectsTraversalOutsideRoot)
add_test(NAME File_PathNormalize_RejectsEmptyAndAbsolutePath COMMAND YuFileTests File_PathNormalize_RejectsEmptyAndAbsolutePath)
add_test(NAME File_MountTable_RejectsDuplicateMount COMMAND YuFileTests File_MountTable_RejectsDuplicateMount)
add_test(NAME File_MountTable_UsesDeterministicPriorityOrder COMMAND YuFileTests File_MountTable_UsesDeterministicPriorityOrder)
add_test(NAME File_MountTable_ReportsMissingMountOrFile COMMAND YuFileTests File_MountTable_ReportsMissingMountOrFile)
add_test(NAME File_LooseFixtureRead_ReturnsExactBytes COMMAND YuFileTests File_LooseFixtureRead_ReturnsExactBytes)
add_test(NAME File_LooseFileSourceRejectsForgedNormalizedPathEscape COMMAND YuFileTests File_LooseFileSourceRejectsForgedNormalizedPathEscape)
add_test(NAME File_ReadSnapshot_RecordsCountsAndBytes COMMAND YuFileTests File_ReadSnapshot_RecordsCountsAndBytes)
add_test(NAME File_DiagnosticsDisabled_DoesNotChangeBehavior COMMAND YuFileTests File_DiagnosticsDisabled_DoesNotChangeBehavior)

add_executable(YuRHITests
    Tests/Rhi/RhiTests.cpp
)
yuengine_apply_compile_options(YuRHITests)
target_link_libraries(YuRHITests PRIVATE YuRHI)
add_test(NAME RHI_CreateNullDevice_ReturnsCapabilities COMMAND YuRHITests RHI_CreateNullDevice_ReturnsCapabilities)
add_test(NAME RHI_CreateDevice_RejectsUnsupportedBackend COMMAND YuRHITests RHI_CreateDevice_RejectsUnsupportedBackend)
add_test(NAME RHI_CreateTarget_ReturnsGenerationHandle COMMAND YuRHITests RHI_CreateTarget_ReturnsGenerationHandle)
add_test(NAME RHI_CreateColorTarget_ReturnsGenerationHandle COMMAND YuRHITests RHI_CreateColorTarget_ReturnsGenerationHandle)
add_test(NAME RHI_CreateColorTarget_RejectsInvalidDescriptor COMMAND YuRHITests RHI_CreateColorTarget_RejectsInvalidDescriptor)
add_test(NAME RHI_TargetCapacityOverflow_DoesNotMutate COMMAND YuRHITests RHI_TargetCapacityOverflow_DoesNotMutate)
add_test(NAME RHI_DestroyTarget_InvalidatesStaleHandle COMMAND YuRHITests RHI_DestroyTarget_InvalidatesStaleHandle)
add_test(NAME RHI_Reinitialize_InvalidatesPriorTargetHandle COMMAND YuRHITests RHI_Reinitialize_InvalidatesPriorTargetHandle)
add_test(NAME RHI_CommandList_RecordsClearWithinCapacity COMMAND YuRHITests RHI_CommandList_RecordsClearWithinCapacity)
add_test(NAME RHI_CommandListCapacityOverflow_DoesNotMutate COMMAND YuRHITests RHI_CommandListCapacityOverflow_DoesNotMutate)
add_test(NAME RHI_SubmitRejectsOversizedCommandListWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsOversizedCommandListWithoutMutation)
add_test(NAME RHI_RecordClear_RejectsInvalidTargetHandle COMMAND YuRHITests RHI_RecordClear_RejectsInvalidTargetHandle)
add_test(NAME RHI_SubmitRejectsIncompleteCommandListWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsIncompleteCommandListWithoutMutation)
add_test(NAME RHI_SubmitRejectsMismatchedRecordedTargetWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsMismatchedRecordedTargetWithoutMutation)
add_test(NAME RHI_SubmitRejectsStaleRecordedTargetWithoutMutation COMMAND YuRHITests RHI_SubmitRejectsStaleRecordedTargetWithoutMutation)
add_test(NAME RHI_SubmitExecutesClearIntoNullTarget COMMAND YuRHITests RHI_SubmitExecutesClearIntoNullTarget)
add_test(NAME RHI_PresentRequiresSuccessfulSubmit COMMAND YuRHITests RHI_PresentRequiresSuccessfulSubmit)
add_test(NAME RHI_PresentRejectsDestroyedSubmittedTargetWithoutMutation COMMAND YuRHITests RHI_PresentRejectsDestroyedSubmittedTargetWithoutMutation)
add_test(NAME RHI_ClearSubmitPresent_UpdatesPresentedCounter COMMAND YuRHITests RHI_ClearSubmitPresent_UpdatesPresentedCounter)
add_test(NAME RHI_CaptureBeforePresent_ReturnsExplicitStatus COMMAND YuRHITests RHI_CaptureBeforePresent_ReturnsExplicitStatus)
add_test(NAME RHI_ClearColor_UsesExactRgba8ByteChannels COMMAND YuRHITests RHI_ClearColor_UsesExactRgba8ByteChannels)
add_test(NAME RHI_CapturePresentedTarget_WritesDeterministicRgba8Bytes COMMAND YuRHITests RHI_CapturePresentedTarget_WritesDeterministicRgba8Bytes)
add_test(NAME RHI_CaptureRejectsDestroyedPresentedTargetWithoutMutation COMMAND YuRHITests RHI_CaptureRejectsDestroyedPresentedTargetWithoutMutation)
add_test(NAME RHI_CaptureRejectsUndersizedBufferWithoutWritingBytes COMMAND YuRHITests RHI_CaptureRejectsUndersizedBufferWithoutWritingBytes)
add_test(NAME RHI_CaptureRejectsTargetLargerThanFixtureCapWithoutWritingBytes COMMAND YuRHITests RHI_CaptureRejectsTargetLargerThanFixtureCapWithoutWritingBytes)
add_test(NAME RHI_FrameSubmitPresentCapture_DoesNotGrowCommandStorage COMMAND YuRHITests RHI_FrameSubmitPresentCapture_DoesNotGrowCommandStorage)
add_test(NAME RHI_DisabledDiagnosticsDoesNotChangeResults COMMAND YuRHITests RHI_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME RHI_NoResourceFileUploadShaderUiDependency COMMAND YuRHITests RHI_NoResourceFileUploadShaderUiDependency)

add_executable(YuAudioTests
    Tests/Audio/AudioTests.cpp
)
yuengine_apply_compile_options(YuAudioTests)
target_link_libraries(YuAudioTests PRIVATE YuAudio)
add_test(NAME Audio_CreateTestDevice_ReturnsCapabilities COMMAND YuAudioTests Audio_CreateTestDevice_ReturnsCapabilities)
add_test(NAME Audio_CreateDevice_RejectsUnsupportedBackend COMMAND YuAudioTests Audio_CreateDevice_RejectsUnsupportedBackend)
add_test(NAME Audio_CreateDevice_RejectsUnsupportedFormat COMMAND YuAudioTests Audio_CreateDevice_RejectsUnsupportedFormat)
add_test(NAME Audio_RegisterSyntheticSource_ReturnsStableId COMMAND YuAudioTests Audio_RegisterSyntheticSource_ReturnsStableId)
add_test(NAME Audio_SourceCapacityOverflow_DoesNotMutate COMMAND YuAudioTests Audio_SourceCapacityOverflow_DoesNotMutate)
add_test(NAME Audio_StartVoice_ReturnsGenerationHandle COMMAND YuAudioTests Audio_StartVoice_ReturnsGenerationHandle)
add_test(NAME Audio_StartVoice_RejectsMissingSource COMMAND YuAudioTests Audio_StartVoice_RejectsMissingSource)
add_test(NAME Audio_StartVoice_RejectsInvalidGainWithoutMutation COMMAND YuAudioTests Audio_StartVoice_RejectsInvalidGainWithoutMutation)
add_test(NAME Audio_VoiceCapacityOverflow_DoesNotMutate COMMAND YuAudioTests Audio_VoiceCapacityOverflow_DoesNotMutate)
add_test(NAME Audio_StopVoice_InvalidatesStaleHandle COMMAND YuAudioTests Audio_StopVoice_InvalidatesStaleHandle)
add_test(NAME Audio_Reinitialize_InvalidatesPriorSourceAndVoiceHandles COMMAND YuAudioTests Audio_Reinitialize_InvalidatesPriorSourceAndVoiceHandles)
add_test(NAME Audio_MixSingleVoice_WritesDeterministicS16StereoSamples COMMAND YuAudioTests Audio_MixSingleVoice_WritesDeterministicS16StereoSamples)
add_test(NAME Audio_MixUnityGain_PreservesS16EdgeSamples COMMAND YuAudioTests Audio_MixUnityGain_PreservesS16EdgeSamples)
add_test(NAME Audio_MixFractionalGain_RoundsTowardZeroDeterministically COMMAND YuAudioTests Audio_MixFractionalGain_RoundsTowardZeroDeterministically)
add_test(NAME Audio_MixMultipleVoices_UsesStableOrderAndSaturates COMMAND YuAudioTests Audio_MixMultipleVoices_UsesStableOrderAndSaturates)
add_test(NAME Audio_MixMaxVoicesFullScaleSaturatesWithoutOverflow COMMAND YuAudioTests Audio_MixMaxVoicesFullScaleSaturatesWithoutOverflow)
add_test(NAME Audio_MixStopsVoiceAtEndOfSource COMMAND YuAudioTests Audio_MixStopsVoiceAtEndOfSource)
add_test(NAME Audio_MixEndedVoice_WritesSilentTail COMMAND YuAudioTests Audio_MixEndedVoice_WritesSilentTail)
add_test(NAME Audio_MixOverwritesPrefilledDestination COMMAND YuAudioTests Audio_MixOverwritesPrefilledDestination)
add_test(NAME Audio_MixRejectsUndersizedBufferWithoutWritingSamples COMMAND YuAudioTests Audio_MixRejectsUndersizedBufferWithoutWritingSamples)
add_test(NAME Audio_UninitializedDeviceOperationsReturnExplicitStatusWithoutMutation COMMAND YuAudioTests Audio_UninitializedDeviceOperationsReturnExplicitStatusWithoutMutation)
add_test(NAME Audio_Mix_DoesNotGrowVoiceStorage COMMAND YuAudioTests Audio_Mix_DoesNotGrowVoiceStorage)
add_test(NAME Audio_DisabledDiagnosticsDoesNotChangeResults COMMAND YuAudioTests Audio_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Audio_NoDeviceCodecResourceScriptUiGameAdapterDependency COMMAND YuAudioTests Audio_NoDeviceCodecResourceScriptUiGameAdapterDependency)

add_executable(YuResourceTests
    Tests/Resource/ResourceTests.cpp
)
yuengine_apply_compile_options(YuResourceTests)
target_link_libraries(YuResourceTests PRIVATE YuResource)
add_test(NAME Resource_RegisterSyntheticDescriptor_ReturnsGenerationHandle COMMAND YuResourceTests Resource_RegisterSyntheticDescriptor_ReturnsGenerationHandle)
add_test(NAME Resource_RegisterDuplicate_ReturnsExplicitStatus COMMAND YuResourceTests Resource_RegisterDuplicate_ReturnsExplicitStatus)
add_test(NAME Resource_RegistryRejectsCapacityOverflowWithoutMutation COMMAND YuResourceTests Resource_RegistryRejectsCapacityOverflowWithoutMutation)
add_test(NAME Resource_TypeCapacityOverflow_DoesNotMutate COMMAND YuResourceTests Resource_TypeCapacityOverflow_DoesNotMutate)
add_test(NAME Resource_HandleRejectsWrongGeneration COMMAND YuResourceTests Resource_HandleRejectsWrongGeneration)
add_test(NAME Resource_HandleRejectsTypeMismatch COMMAND YuResourceTests Resource_HandleRejectsTypeMismatch)
add_test(NAME Resource_AcquireRelease_TracksReferenceCount COMMAND YuResourceTests Resource_AcquireRelease_TracksReferenceCount)
add_test(NAME Resource_RepeatedAcquire_IncrementsReferenceCount COMMAND YuResourceTests Resource_RepeatedAcquire_IncrementsReferenceCount)
add_test(NAME Resource_AcquireRejectsReferenceCountOverflow COMMAND YuResourceTests Resource_AcquireRejectsReferenceCountOverflow)
add_test(NAME Resource_RetireRejectsOutstandingAcquire COMMAND YuResourceTests Resource_RetireRejectsOutstandingAcquire)
add_test(NAME Resource_RetireRejectsLiveDependentEdge COMMAND YuResourceTests Resource_RetireRejectsLiveDependentEdge)
add_test(NAME Resource_DependencyValidationRejectsMissingDependency COMMAND YuResourceTests Resource_DependencyValidationRejectsMissingDependency)
add_test(NAME Resource_DependencyValidationRejectsCycle COMMAND YuResourceTests Resource_DependencyValidationRejectsCycle)
add_test(NAME Resource_NoFileOrPackageDependency_ForHandleRegistry COMMAND YuResourceTests Resource_NoFileOrPackageDependency_ForHandleRegistry)
add_test(NAME Resource_DisabledDiagnosticsDoesNotChangeResults COMMAND YuResourceTests Resource_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Resource_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuResourceTests Resource_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuObjectTests
    Tests/Object/ObjectTests.cpp
)
yuengine_apply_compile_options(YuObjectTests)
target_link_libraries(YuObjectTests PRIVATE YuObject)
add_test(NAME Object_CreateSyntheticObject_ReturnsGenerationHandle COMMAND YuObjectTests Object_CreateSyntheticObject_ReturnsGenerationHandle)
add_test(NAME Object_CreateRejectsInvalidTypeWithoutMutation COMMAND YuObjectTests Object_CreateRejectsInvalidTypeWithoutMutation)
add_test(NAME Object_RegistryCapacityOverflow_DoesNotMutate COMMAND YuObjectTests Object_RegistryCapacityOverflow_DoesNotMutate)
add_test(NAME Object_TypeCapacityOverflow_DoesNotMutate COMMAND YuObjectTests Object_TypeCapacityOverflow_DoesNotMutate)
add_test(NAME Object_ValidateRejectsInvalidOrStaleHandle COMMAND YuObjectTests Object_ValidateRejectsInvalidOrStaleHandle)
add_test(NAME Object_InvalidOrStaleHandleOperations_ReturnExplicitStatusWithoutMutation COMMAND YuObjectTests Object_InvalidOrStaleHandleOperations_ReturnExplicitStatusWithoutMutation)
add_test(NAME Object_DestroyIncrementsGenerationAndInvalidatesOldHandle COMMAND YuObjectTests Object_DestroyIncrementsGenerationAndInvalidatesOldHandle)
add_test(NAME Object_ReusesFreedSlotWithNewGeneration COMMAND YuObjectTests Object_ReusesFreedSlotWithNewGeneration)
add_test(NAME Object_AcquireRelease_TracksReferenceCount COMMAND YuObjectTests Object_AcquireRelease_TracksReferenceCount)
add_test(NAME Object_RepeatedAcquire_IncrementsReferenceCount COMMAND YuObjectTests Object_RepeatedAcquire_IncrementsReferenceCount)
add_test(NAME Object_AcquireRejectsReferenceCountOverflow COMMAND YuObjectTests Object_AcquireRejectsReferenceCountOverflow)
add_test(NAME Object_ReleaseAtZero_DoesNotMutate COMMAND YuObjectTests Object_ReleaseAtZero_DoesNotMutate)
add_test(NAME Object_DestroyRejectsOutstandingReference COMMAND YuObjectTests Object_DestroyRejectsOutstandingReference)
add_test(NAME Object_RegistrySnapshot_ReportsCountsAndLastStatus COMMAND YuObjectTests Object_RegistrySnapshot_ReportsCountsAndLastStatus)
add_test(NAME Object_DisabledDiagnosticsDoesNotChangeResults COMMAND YuObjectTests Object_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Object_NoWorldScriptResourceOrGameAdapterDependency COMMAND YuObjectTests Object_NoWorldScriptResourceOrGameAdapterDependency)
add_test(NAME Object_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuObjectTests Object_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuSerializeTests
    Tests/Serialize/SerializeTests.cpp
)
yuengine_apply_compile_options(YuSerializeTests)
target_link_libraries(YuSerializeTests PRIVATE YuSerialize)
add_test(NAME Serialize_WriteReadPrimitives_RoundTripsDeterministically COMMAND YuSerializeTests Serialize_WriteReadPrimitives_RoundTripsDeterministically)
add_test(NAME Serialize_StreamHeader_RejectsInvalidMagicOrVersion COMMAND YuSerializeTests Serialize_StreamHeader_RejectsInvalidMagicOrVersion)
add_test(NAME Serialize_StreamHeader_RejectsReservedFlags COMMAND YuSerializeTests Serialize_StreamHeader_RejectsReservedFlags)
add_test(NAME Serialize_WriterBufferOverflow_ReturnsStatusWithoutOverrun COMMAND YuSerializeTests Serialize_WriterBufferOverflow_ReturnsStatusWithoutOverrun)
add_test(NAME Serialize_RecordCapacityOverflow_DoesNotMutate COMMAND YuSerializeTests Serialize_RecordCapacityOverflow_DoesNotMutate)
add_test(NAME Serialize_FieldCapacityOverflow_DoesNotMutate COMMAND YuSerializeTests Serialize_FieldCapacityOverflow_DoesNotMutate)
add_test(NAME Serialize_FixedBytesPayloadLimit_ReturnsExplicitStatus COMMAND YuSerializeTests Serialize_FixedBytesPayloadLimit_ReturnsExplicitStatus)
add_test(NAME Serialize_ReaderRejectsTruncatedStream COMMAND YuSerializeTests Serialize_ReaderRejectsTruncatedStream)
add_test(NAME Serialize_ReaderRejectsInvalidRecordOrFieldId COMMAND YuSerializeTests Serialize_ReaderRejectsInvalidRecordOrFieldId)
add_test(NAME Serialize_ReaderRejectsMalformedFieldLength COMMAND YuSerializeTests Serialize_ReaderRejectsMalformedFieldLength)
add_test(NAME Serialize_ReaderRejectsUnknownTypeTag COMMAND YuSerializeTests Serialize_ReaderRejectsUnknownTypeTag)
add_test(NAME Serialize_ReaderTypeMismatch_ReturnsExplicitStatus COMMAND YuSerializeTests Serialize_ReaderTypeMismatch_ReturnsExplicitStatus)
add_test(NAME Serialize_DuplicateField_ReturnsExplicitStatus COMMAND YuSerializeTests Serialize_DuplicateField_ReturnsExplicitStatus)
add_test(NAME Serialize_UnknownFieldWithValidLength_CanSkipDeterministically COMMAND YuSerializeTests Serialize_UnknownFieldWithValidLength_CanSkipDeterministically)
add_test(NAME Serialize_DisabledDiagnostics_DoesNotChangeResults COMMAND YuSerializeTests Serialize_DisabledDiagnostics_DoesNotChangeResults)
add_test(NAME Serialize_NoFilePackageResourceObjectOrGameAdapterDependency COMMAND YuSerializeTests Serialize_NoFilePackageResourceObjectOrGameAdapterDependency)
add_test(NAME Serialize_NoHiddenAllocationInReadWritePath COMMAND YuSerializeTests Serialize_NoHiddenAllocationInReadWritePath)
add_test(NAME Serialize_SnapshotReportsCountsAndLastStatus COMMAND YuSerializeTests Serialize_SnapshotReportsCountsAndLastStatus)

add_executable(YuPackageTests
    Tests/Package/PackageTests.cpp
)
yuengine_apply_compile_options(YuPackageTests)
target_link_libraries(YuPackageTests PRIVATE YuPackage)
add_test(NAME Package_RegisterSyntheticManifest_ReturnsStableId COMMAND YuPackageTests Package_RegisterSyntheticManifest_ReturnsStableId)
add_test(NAME Package_RegisterDuplicateManifest_ReturnsExplicitStatus COMMAND YuPackageTests Package_RegisterDuplicateManifest_ReturnsExplicitStatus)
add_test(NAME Package_RegisterEntry_ReturnsStableEntryId COMMAND YuPackageTests Package_RegisterEntry_ReturnsStableEntryId)
add_test(NAME Package_RegisterDuplicateEntry_ReturnsExplicitStatus COMMAND YuPackageTests Package_RegisterDuplicateEntry_ReturnsExplicitStatus)
add_test(NAME Package_RegisterDuplicateResourceKey_ReturnsExplicitStatus COMMAND YuPackageTests Package_RegisterDuplicateResourceKey_ReturnsExplicitStatus)
add_test(NAME Package_RegisterInvalidIdsOrType_ReturnsExplicitStatusWithoutMutation COMMAND YuPackageTests Package_RegisterInvalidIdsOrType_ReturnsExplicitStatusWithoutMutation)
add_test(NAME Package_ManifestCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_ManifestCapacityOverflow_DoesNotMutate)
add_test(NAME Package_EntryCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_EntryCapacityOverflow_DoesNotMutate)
add_test(NAME Package_RegisterEntryRejectsOversizedKeysWithoutMutation COMMAND YuPackageTests Package_RegisterEntryRejectsOversizedKeysWithoutMutation)
add_test(NAME Package_RegisterEntryRejectsOversizedByteRangeWithoutMutation COMMAND YuPackageTests Package_RegisterEntryRejectsOversizedByteRangeWithoutMutation)
add_test(NAME Package_ResolveEntryByResourceKey_ReturnsDeterministicLoadPlan COMMAND YuPackageTests Package_ResolveEntryByResourceKey_ReturnsDeterministicLoadPlan)
add_test(NAME Package_ResolveEntryByResourceKey_UsesTypeAndLogicalKeyTuple COMMAND YuPackageTests Package_ResolveEntryByResourceKey_UsesTypeAndLogicalKeyTuple)
add_test(NAME Package_IndexedLookupsPreserveStatusOrderAndCapacities COMMAND YuPackageTests Package_IndexedLookupsPreserveStatusOrderAndCapacities)
add_test(NAME Package_ResolveRejectsUnknownResourceKey COMMAND YuPackageTests Package_ResolveRejectsUnknownResourceKey)
add_test(NAME Package_ResolveRejectsTypeMismatchWithoutMutation COMMAND YuPackageTests Package_ResolveRejectsTypeMismatchWithoutMutation)
add_test(NAME Package_DependencyValidationRejectsMissingEntry COMMAND YuPackageTests Package_DependencyValidationRejectsMissingEntry)
add_test(NAME Package_DependencyValidationRejectsCycle COMMAND YuPackageTests Package_DependencyValidationRejectsCycle)
add_test(NAME Package_DependencyValidationRejectsCycleAfterHighFanout COMMAND YuPackageTests Package_DependencyValidationRejectsCycleAfterHighFanout)
add_test(NAME Package_DependencyPlanPreservesDeclarationOrder COMMAND YuPackageTests Package_DependencyPlanPreservesDeclarationOrder)
add_test(NAME Package_DependencyCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_DependencyCapacityOverflow_DoesNotMutate)
add_test(NAME Package_LoadPlanCapacityOverflow_DoesNotMutate COMMAND YuPackageTests Package_LoadPlanCapacityOverflow_DoesNotMutate)
add_test(NAME Package_DisabledDiagnosticsDoesNotChangeResults COMMAND YuPackageTests Package_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Package_NoFileReadOriginalPackageOrGameAdapterDependency COMMAND YuPackageTests Package_NoFileReadOriginalPackageOrGameAdapterDependency)
add_test(NAME Package_NoHiddenAllocation_UsesYuMemorySignal COMMAND YuPackageTests Package_NoHiddenAllocation_UsesYuMemorySignal)

add_executable(YuInputTests
    Tests/Input/InputTests.cpp
)
yuengine_apply_compile_options(YuInputTests)
target_link_libraries(YuInputTests PRIVATE YuInput)
add_test(NAME Input_RegisterActionBinding_ReturnsStableActionId COMMAND YuInputTests Input_RegisterActionBinding_ReturnsStableActionId)
add_test(NAME Input_RegisterControlAlreadyBound_ReturnsDuplicateStatus COMMAND YuInputTests Input_RegisterControlAlreadyBound_ReturnsDuplicateStatus)
add_test(NAME Input_MultipleControlsForOneAction_UsesInsertionOrder COMMAND YuInputTests Input_MultipleControlsForOneAction_UsesInsertionOrder)
add_test(NAME Input_BindingCapacityOverflow_DoesNotMutate COMMAND YuInputTests Input_BindingCapacityOverflow_DoesNotMutate)
add_test(NAME Input_ReplayFrame_AppliesButtonPressAndRelease COMMAND YuInputTests Input_ReplayFrame_AppliesButtonPressAndRelease)
add_test(NAME Input_ReplayFrame_EventOrderIsDeterministic COMMAND YuInputTests Input_ReplayFrame_EventOrderIsDeterministic)
add_test(NAME Input_ReplayFrame_EventOrderLastValidValueWins COMMAND YuInputTests Input_ReplayFrame_EventOrderLastValidValueWins)
add_test(NAME Input_ReplayFrame_PressReleaseSameFrame_SetsChangedFlag COMMAND YuInputTests Input_ReplayFrame_PressReleaseSameFrame_SetsChangedFlag)
add_test(NAME Input_ReplayFrame_AppliesFixedPointAxisValue COMMAND YuInputTests Input_ReplayFrame_AppliesFixedPointAxisValue)
add_test(NAME Input_InvalidAxisValue_ReturnsExplicitStatusWithoutMutation COMMAND YuInputTests Input_InvalidAxisValue_ReturnsExplicitStatusWithoutMutation)
add_test(NAME Input_InvalidEvent_DoesNotMutateReplayOrSnapshot COMMAND YuInputTests Input_InvalidEvent_DoesNotMutateReplayOrSnapshot)
add_test(NAME Input_UnknownDeviceControlOrAction_ReturnsExplicitStatus COMMAND YuInputTests Input_UnknownDeviceControlOrAction_ReturnsExplicitStatus)
add_test(NAME Input_EventCapacityOverflow_DoesNotMutateReplay COMMAND YuInputTests Input_EventCapacityOverflow_DoesNotMutateReplay)
add_test(NAME Input_FrameSnapshot_IsDeterministicAcrossReplay COMMAND YuInputTests Input_FrameSnapshot_IsDeterministicAcrossReplay)
add_test(NAME Input_ResetClearsChangedStateWithoutClearingPressedState COMMAND YuInputTests Input_ResetClearsChangedStateWithoutClearingPressedState)
add_test(NAME Input_DisabledDiagnosticsDoesNotChangeResults COMMAND YuInputTests Input_DisabledDiagnosticsDoesNotChangeResults)
add_test(NAME Input_FrameApply_DoesNotGrowReplayStorage COMMAND YuInputTests Input_FrameApply_DoesNotGrowReplayStorage)
add_test(NAME Input_NoPlatformUiOrGameAdapterDependency COMMAND YuInputTests Input_NoPlatformUiOrGameAdapterDependency)
